--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -21,10 +21,12 @@
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
             <h2>Data Structure Quiz 1</h2>
         </div>
-        <div id="coming-soon">..... قريبا  افتتاح المنصة</div>
+        <div id="coming-soon">قريبا الافتتاح…</div>
         <div id="question-container">
             <h3 id="question-text"></h3>
             <div id="options"></div>
+            <button id="see-answer-btn">See the Answer</button>
+            <div id="correct-answer" class="answer-display"></div>
         </div>
         <div class="navigation">
             <button id="prev-btn" disabled>Previous</button>
