--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -21,7 +21,7 @@
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
             <h2>Data Structure Quiz 1</h2>
         </div>
-        <div id="coming-soon">قريبا الافتتاح…</div>
+        <div id="coming-soon">… Coming Soon</div>
         <div id="question-container">
             <h3 id="question-text"></h3>
             <div id="options"></div>
