--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Structure Exam</title>
+    <title>Data Structure Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,9 +19,10 @@
     <div id="exam-page" class="page">
         <div class="header">
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
-            <h2>Data Structure Exam</h2>
+            <h2>Data Structure Quiz 1</h2>
         </div>
-        <div id="coming-soon"> Coming Soon ....</div>
+        <div id="total-questions" class="total-questions"></div>
+        <div id="coming-soon">قريبا الافتتاح…</div>
         <div id="question-container">
             <h3 id="question-text"></h3>
             <div id="options"></div>
@@ -43,8 +44,10 @@
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
             <h2>Your Score</h2>
         </div>
-        <div id="coming-soon">قريبا الافتتاح…</div>
+        <div id="total-questions-results" class="total-questions"></div>
+        <div id="coming-soon">Coming Soon ...</div>
         <div id="score"></div>
+        <div id="score-note" class="score-note">لاكمال الامتحان انقر على Continue</div>
         <button id="restart-btn">Restart Exam</button>
         <div class="footer-text">
             منصة ايكامبس التعليمية ، معك من أول محاضرة للتخرج
