--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -19,7 +19,7 @@
     <div id="exam-page" class="page">
         <div class="header">
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
-            <h2>Data Structure Quiz 1</h2>
+            <h2>Data Structure Quiz</h2>
         </div>
         <div id="total-questions" class="total-questions"></div>
         <div id="coming-soon">قريبا الافتتاح…</div>
