--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Structure Quiz</title>
+    <title>Data Structure Exam</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     <div id="exam-page" class="page">
         <div class="header">
             <img src="logo.png" alt="eCampus Logo" class="logo responsive-image">
-            <h2>Data Structure Quiz</h2>
+            <h2>Data Structure Exam</h2>
         </div>
         <div id="total-questions" class="total-questions"></div>
         <div id="coming-soon">قريبا الافتتاح…</div>
