--- a/Data_Structure/index.html
+++ b/Data_Structure/index.html
@@ -22,7 +22,7 @@
             <h2>Data Structure Exam</h2>
         </div>
         <div id="total-questions" class="total-questions"></div>
-        <div id="coming-soon">قريبا الافتتاح…</div>
+        <div id="coming-soon">Coming Soon…</div>
         <div id="question-container">
             <h3 id="question-text"></h3>
             <div id="options"></div>
